# nasteroids

./: .gitignore  .travis.yml  Asteroid.cpp  Asteroid.h  Body.cpp  Body.h  CMakeLists.txt  Computations.cpp  Computations.h  Constants.h  Doxyfile  Planet.cpp  Planet.h  Point.cpp  Point.h  README.md  authors.txt  build.sh  deploy-test-script.sh  init_conf.txt  init_conf_base.txt  main.cpp  nasteroid-base  out.txt  out_base.txt  tests.sh
html/: _asteroid_8h_source.html  _body_8h_source.html  _computations_8h_source.html  _constants_8h_source.html  _planet_8h_source.html  annotated.html  class_asteroid-members.html  class_asteroid.html  class_body-members.html  class_body.html  class_planet-members.html  class_planet.html  classes.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md__r_e_a_d_m_e.html  pages.html
html/search/: all_0.js  all_1.js  all_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
latex/: annotated.tex  class_asteroid.eps  class_asteroid.tex  class_body.eps  class_body.tex  class_planet.eps  class_planet.tex  hierarchy.tex  md__r_e_a_d_m_e.tex  refman.tex
nasteroids-par/: Body.cpp  main.cpp
nasteroids-seq/: CMakeLists.txt  Planet.cpp
par/: CMakeLists.txt  Computations.cpp  Planet.cpp  main.cpp
seq/: CMakeLists.txt  Computations.cpp  Constants.h  Planet.h  main.cpp
